fix issue with navbar showing on mobile but not usable

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -70,17 +70,6 @@ nav ul{
 
 @media only screen and (max-width: 700px){
 	nav{visibility: visible;}
-	.topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 }
 
 h1{
